# sphinx-pyproject

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_static/: style.css
doc-source/api/: sphinx-pyproject.rst
sphinx_pyproject/: __init__.py  parser.py
tests/: requirements.txt  test_sphinx_pyproject.py
tests/test_sphinx_pyproject_/: test_parse_config_extensions_.yml  test_parse_config_github_repository_.yml  test_parse_config_github_username_.yml  test_parse_config_html_show_sourcelink_.yml  test_parse_config_multiple_keys_.yml  test_parse_our_config.yml
